--- a/IOC/IOC.csproj
+++ b/IOC/IOC.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Data\2.Data.csproj" />
+    <ProjectReference Include="..\Domain\1.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
